k8s/user-api/user-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api
  labels:
    app: user-api
spec:
  type: NodePort
  ports:
   - port: 8080
     targetPort: 80
  selector:
   app: user-api
