k8s/user-api/user-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1   
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: user-api
                port:
                  number: 8080
